Bug 1394323 - Remove overflow css rule for 'response-panel' as it prevents scrolling in Console 'Response' tab. r=nchevobbe
MozReview-Commit-ID: GHbYuCfs9L

UltraBlame original commit: 4ef69bbd6816d95ade430640785971f587e2d5bc

--- a/devtools/client/themes/webconsole.css
+++ b/devtools/client/themes/webconsole.css
@@ -4809,24 +4809,6 @@ none
 network
 .
 message
-#
-response
--
-panel
-.
-treeTable
-{
-overflow
--
-y
-:
-hidden
-;
-}
-.
-network
-.
-message
 -
 flex
 -
